--- a/css/custom.css
+++ b/css/custom.css
@@ -293,13 +293,13 @@ label {
 .ticketBox .ticket-price-count-box .ticket-control .input-group .input-group-btn button {
     display: inline-block;
     border: 0px solid rgba(0, 0, 0, 0.12);
-    padding: 10px;
-    width: 32px;
+    padding: 5px;
+    width: 28px;
     text-align: center;
     border-radius: 50%;
     font-weight: 600;
     color: #000000;
-    font-size: 9px;
+    font-size: 12px;
     background: #f5f5f5;
 	box-shadow: none;
 	transition: all 0.5s;
@@ -325,7 +325,7 @@ label {
     padding-right: 12px;
     position: absolute;
     bottom: 0;
-    background: rgb(239 148 26 / 50%);
+    background: rgba(255, 255, 0, 0.901);
     padding-bottom: 8px;
     padding-top: 8px;
     border-radius: 8px;
