sertifikat android native

--- a/css/custom.css
+++ b/css/custom.css
@@ -22,7 +22,7 @@ iframe.blogshot {
 
 /* common style's */
 a {
-  color: #FFC107;
+  color: #2196F3;
   -webkit-transition: all 0.5s;
   -moz-transition: all 0.5s;
   transition: all 0.5s;
